# react-native-fast-openpgp

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  RNFastOpenpgp.podspec  index.js  package.json  react-native-fast-openpgp.podspec  tsconfig.json  upgrade_lib_bridge.sh
.github/workflows/: android.yml  detox.yml  integration.yml  ios.yml  npm.yml  release.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  fast-openpgp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fastopenpgp/: FastOpenpgpModule.kt  FastOpenpgpPackage.kt
android/src/main/java/com/reactnativefastopenpgp/: FastOpenpgpModule.kt
android/src/main/java/com/reactnativefastopenpgp/model/: BoolResponse.kt  BytesResponse.kt  Cipher.kt  Compression.kt  DecryptBytesRequest.kt  DecryptRequest.kt  DecryptSymmetricBytesRequest.kt  DecryptSymmetricRequest.kt  EncryptBytesRequest.kt  EncryptRequest.kt  EncryptSymmetricBytesRequest.kt  EncryptSymmetricRequest.kt  Entity.kt  FileHints.kt  GenerateRequest.kt  Hash.kt  KeyOptions.kt  KeyPair.kt  KeyPairResponse.kt  Options.kt  PrivateKeyMetadata.kt  PublicKeyMetadata.kt  SignBytesRequest.kt  SignRequest.kt  StringResponse.kt  VerifyBytesRequest.kt  VerifyRequest.kt
android/src/main/java/dev/jerson/: RNFastOpenPGPModule.java  RNFastOpenPGPPackage.java
cpp/: libopenpgp_bridge.h  react-native-fast-openpgp.cpp  react-native-fast-openpgp.h
example/: .detoxrc.js  .detoxrc.json  .gitignore  App.js  app.json  package.json
example/android/: build.gradle  settings.gradle
example/e2e/: app.e2e.js  app.test.js  firstTest.e2e.js
example/ios/: File.swift  Podfile
example/src/: App.tsx
ios/: FastOpenPGP.h  FastOpenPGP.mm  FastOpenpgp.h  FastOpenpgp.mm  RNFastOpenPGP.h  RNFastOpenPGP.m  RNFastOpenpgp.h  RNFastOpenpgp.m  RNFastOpenpgp.podspec
ios/FastOpenpgp.xcodeproj/: project.pbxproj
ios/Openpgp.xcframework/: Info.plist
ios/RNFastOpenpgp.xcodeproj/: project.pbxproj
ios/RNFastOpenpgp.xcworkspace/: contents.xcworkspacedata
ios/native/: FastOpenpgp.podspec  OpenPGP.podspec
scripts/: upgrade_bridge_flatbuffers.sh  upgrade_bridge_libs.sh
src/: bridge.ts  index.ts  index.tsx  model.ts  shim.ts  shim.tsx  types.d.ts
src/flatbuffers/: builder.ts  byte-buffer.ts  flatbuffers.ts  long.ts  types.ts
src/model/: algorithm.ts  armor-decode-request.ts  armor-decode-response.ts  armor-encode-request.ts  armor-metadata.ts  bool-response.ts  bridge_generated.ts  bytes-response.ts  cipher.ts  compression.ts  convert-private-key-to-public-key-request.ts  curve.ts  decrypt-bytes-request.ts  decrypt-file-request.ts  decrypt-request.ts  decrypt-symmetric-bytes-request.ts  decrypt-symmetric-file-request.ts  decrypt-symmetric-request.ts  encrypt-bytes-request.ts  encrypt-file-request.ts  encrypt-request.ts  encrypt-symmetric-bytes-request.ts  encrypt-symmetric-file-request.ts  encrypt-symmetric-request.ts  entity.ts  file-hints.ts  generate-request.ts  get-private-key-metadata-request.ts  get-public-key-metadata-request.ts  hash.ts  identity.ts  int-response.ts  key-options.ts  key-pair-response.ts  key-pair.ts  options.ts  private-key-metadata-response.ts  private-key-metadata.ts  public-key-metadata-response.ts  public-key-metadata.ts  (+11 more)
src/utils/: big-int.ts  (+2 more)
(+55 files in other folders)
